moved from ffmpeg.exe to python av attempting some sort of rate limiting for slow thumbnails triple buffering viewed images so prev/next are both flicker free fixed thumbnails per row count function

--- a/webServer/resources/style.css
+++ b/webServer/resources/style.css
@@ -192,7 +192,7 @@ a {
 	display   : none;
 }
 
-#viewImg, #viewImg2 {
+#viewImg, #viewImg2, #viewImg3 {
 	display      : block;
 	margin       : auto;
 	max-height   : 99%;
